--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
     "require-dev": {
         "phpunit/phpunit": "^9.5",
         "squizlabs/php_codesniffer": "*",
-        "behat/behat": "^3.8"
+        "behat/behat": "^3.8",
+        "kodus/file-cache": "^1.1"
     },
     "scripts": {
         "test": [
@@ -32,5 +33,8 @@
             "phpcbf -q --standard=PSR12 src tests || true",
             "phpcs --standard=PSR12 -s src tests"
         ]
+    },
+    "require": {
+        "psr/simple-cache": "^1.0"
     }
 }
