--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "Compwright\\PhpSession\\Tests\\": ["tests"]
+            "Compwright\\PhpSession\\Tests\\": ["tests/features"]
         }
     },
     "authors": [
@@ -33,11 +33,15 @@
             "php -d memory_limit=4G vendor/bin/behat"
         ],
         "lint": [
-            "phpcbf -q --standard=PSR12 src tests || true",
-            "phpcs --standard=PSR12 -s src tests"
+            "phpcbf -q --standard=PSR12 src tests/features || true",
+            "phpcs --standard=PSR12 -s src tests/features"
         ]
     },
     "require": {
-        "psr/simple-cache": "^1.0"
+        "psr/simple-cache": "^1.0",
+        "psr/http-message": "^1.0",
+        "psr/http-server-handler": "^1.0",
+        "psr/http-server-middleware": "^1.0",
+        "dflydev/fig-cookies": "^3.0"
     }
 }
