--- a/composer.json
+++ b/composer.json
@@ -66,7 +66,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Compwright\\PhpSession\\": "src/PhpSession/"
+            "Compwright\\PhpSession\\": "src/"
         },
         "files": [
             "src/PhpSession/Frameworks/Slim/registerSessionMiddleware.php"
