--- a/composer.json
+++ b/composer.json
@@ -40,29 +40,29 @@
     },
     "require": {
         "php": "^7.4 || ^8.0",
+        "dflydev/fig-cookies": "^3.0",
         "psr/simple-cache": "^1",
         "psr/http-message": "^1",
         "psr/http-server-handler": "^1",
-        "psr/http-server-middleware": "^1",
-        "dflydev/fig-cookies": "^3.0"
+        "psr/http-server-middleware": "^1"
     },
     "require-dev": {
-        "phpstan/phpstan": "dev-master",
-        "phpunit/phpunit": "^9.5",
-        "squizlabs/php_codesniffer": "*",
         "behat/behat": "^3.8",
-        "kodus/file-cache": "^1.1",
-        "matthiasmullie/scrapbook": "^1.4",
-        "odan/cache": "^0.5.0",
-        "league/flysystem": "^2.2",
         "bramus/monolog-colored-line-formatter": "^3.0",
         "compwright/swoole-psr7-compat": "^2.0",
+        "friendsofphp/php-cs-fixer": "^3.11",
+        "kodus/file-cache": "^1.1",
+        "league/flysystem": "^2.2",
+        "matthiasmullie/scrapbook": "^1.4",
         "middlewares/access-log": "^2.0",
         "monolog/monolog": "^2.3",
-        "slim/psr7": "^1.4",
-        "slim/slim": "^4.8",
+        "odan/cache": "^0.5.0",
         "php-di/php-di": "^6.3",
-        "psr/log": "^1.1"
+        "phpstan/phpstan": "^1.8",
+        "phpunit/phpunit": "^9.5",
+        "psr/log": "^1.1",
+        "slim/psr7": "^1.4",
+        "slim/slim": "^4.8"
     },
     "autoload": {
         "psr-4": {
