--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,7 @@
     "require": {
         "php": "^7.4 || ^8.0",
         "dflydev/fig-cookies": "^3.0",
-        "psr/simple-cache": "^1",
+        "psr/simple-cache": "^2 || ^3",
         "psr/http-message": "^1",
         "psr/http-server-handler": "^1",
         "psr/http-server-middleware": "^1"
@@ -51,12 +51,11 @@
         "bramus/monolog-colored-line-formatter": "^3.0",
         "compwright/swoole-psr7-compat": "^2.0",
         "friendsofphp/php-cs-fixer": "^3.11",
-        "kodus/file-cache": "^1.1",
+        "kodus/file-cache": "^2",
         "league/flysystem": "^2.2",
         "matthiasmullie/scrapbook": "^1.4",
         "middlewares/access-log": "^2.0",
         "monolog/monolog": "^2.3",
-        "odan/cache": "^0.5.0",
         "php-di/php-di": "^6.3",
         "phpstan/phpstan": "^1.8",
         "phpunit/phpunit": "^9.5",
