--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,7 @@
         "matthiasmullie/scrapbook": "Scrapbook Cache provides excellent session storage options"
     },
     "require": {
-        "php": "^7.4 || ^8.0",
+        "php": "^8.0 || ^8.1 || ^8.2",
         "dflydev/fig-cookies": "^3.0",
         "psr/simple-cache": "^2 || ^3",
         "psr/http-message": "^1",
