chore: upgrade dev dependencies

--- a/composer.json
+++ b/composer.json
@@ -52,14 +52,14 @@
         "compwright/swoole-psr7-compat": "^2.0",
         "friendsofphp/php-cs-fixer": "^3.11",
         "kodus/file-cache": "^2",
-        "league/flysystem": "^2.2",
+        "league/flysystem": "^3.12",
         "matthiasmullie/scrapbook": "^1.4",
         "middlewares/access-log": "^2.0",
-        "monolog/monolog": "^2.3",
+        "monolog/monolog": "^3.2",
         "php-di/php-di": "^6.3",
         "phpstan/phpstan": "^1.8",
         "phpunit/phpunit": "^9.5",
-        "psr/log": "^1.1",
+        "psr/log": "^2 || ^3",
         "slim/psr7": "^1.4",
         "slim/slim": "^4.8"
     },
