--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,10 @@
         {
             "name": "Jonathon Hill",
             "email": "jonathon@compwright.com"
+        },
+        {
+            "name": "Yani",
+            "email": "yani@xenokore.com"
         }
     ],
     "homepage": "https://github.com/compwright/php-session",
@@ -39,13 +43,13 @@
     "require": {
         "php": "^8.0 || ^8.1 || ^8.2",
         "dflydev/fig-cookies": "^3.0",
-        "psr/simple-cache": "^2 || ^3",
-        "psr/http-message": "^1",
+        "psr/simple-cache": "^1 || ^2 || ^3",
+        "psr/http-message": "^1 || ^2",
         "psr/http-server-handler": "^1",
         "psr/http-server-middleware": "^1"
     },
     "require-dev": {
-        "behat/behat": "^3.8",
+        "behat/behat": "^3.13",
         "bramus/monolog-colored-line-formatter": "^3.0",
         "friendsofphp/php-cs-fixer": "^3.11",
         "kodus/file-cache": "^2",
@@ -53,12 +57,12 @@
         "matthiasmullie/scrapbook": "^1.4",
         "middlewares/access-log": "^2.0",
         "monolog/monolog": "^3.2",
-        "php-di/php-di": "^6.3",
+        "php-di/php-di": "^7.0",
         "phpstan/phpstan": "^1.8",
-        "phpunit/phpunit": "^9.5",
+        "phpunit/phpunit": "^10.5",
         "psr/log": "^2 || ^3",
-        "slim/psr7": "^1.4",
-        "slim/slim": "^4.8"
+        "slim/psr7": "^1.6",
+        "slim/slim": "^4.11"
     },
     "autoload": {
         "psr-4": {
